# gen-canvas-OSS-mixboard

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.claude/: settings.local.json
docs/: InfiniteCanvas.md  api-integration.md  backend relay.md  clipboard-functionality.md  context-menu-feature.md  image-drag-resize-architecture.md  parallel-image-generation12.md  webhook-refactoring-proposal.md  webhook-refactoring-summary.md
server/: .env.example  config.py  main.py  pyproject.toml
server/.claude/: settings.local.json
server/routers/: chat.py  generate.py  sse.py  sse_session.py  webhook.py
server/schemas/: requests.py  responses.py
server/services/: groq_chat.py  sse_manager.py  z_image.py
src/: App.css  App.tsx  index.css
src/api/: generated.ts  mutation.ts
src/components/: ApiKeyPill.tsx  AutoGrowingTextarea.tsx  BaseVariationsModal.tsx  ContextMenu.tsx  CreateVariationsModal.tsx  InfiniteCanvas.tsx  KeyForm.tsx  ModelCombobox.tsx  ModelSelector.tsx  PromptBar.tsx  PromptCreatorModal.tsx  PromptInstructionInput.tsx  Toolbar.css  Toolbar.tsx  modelConstants.ts
src/config/: api.ts
src/constants/: imageGeneration.ts
src/hooks/: useBatchImageGeneration.ts  useCanvas.ts  useCanvasClipboard.ts  useCanvasContextMenu.ts  useCanvasCursor.ts  useCanvasDrawing.ts  useCanvasImageDrag.ts  useCanvasImageResize.ts  useCanvasImages.ts  useCanvasKeyboard.ts  useCanvasMultiDrag.ts  useCanvasSelection.ts  (+5 more)
(+28 files in other folders)
