[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.43.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pylint>=4.0.5",
    "ruff>=0.15.9",
]
